--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Dragon Ball Z Character Info API</h1>
-  <p>Please use localhost:8000/api/dbz-characters</p>
+  <p>Please use https://nice-gray-cockroach-garb.cyclic.app/</p>
   <p>This simple API shows info on DBZ characters including manga & anime names, height & weight, birth & death dates, power levels and more!</p>
   <p>search for characters below!</p>
 </body>
