added new characters, updated cors, fixed small issues

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <h1>Dragon Ball Z Character Info API</h1>
-  <p>Please use https://nice-gray-cockroach-garb.cyclic.app/</p>
-  <p>This simple API shows info on DBZ characters including manga & anime names, height & weight, birth & death dates, power levels and more!</p>
+  <p>Please use https://nice-gray-cockroach-garb.cyclic.app/character-name</p>
+  <p>This simple API shows info on DBZ characters like height & weight, birth & death dates, power levels, short descriptions and more!</p>
   <p>search for characters below!</p>
 </body>
 </html>
