updated index.html and main.js for API testing

--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
 </head>
 <body>
   <h1>Dragon Ball Z Character Info API</h1>
-  <p>Please use https://nice-gray-cockroach-garb.cyclic.app/character-name</p>
   <p>This simple API shows info on DBZ characters like height & weight, birth & death dates, power levels, short descriptions and more!</p>
-  <p>search for characters below!</p>
+  <p>Please use <code>https://nice-gray-cockroach-garb.cyclic.app/character-name</code></p>
+  <p>Change <code>character-name</code> to whichever characters name you want to view.</p>
+  <h2>Test it out below!</h2>
+
+  <input type="text" class="charactersName">
+  <button>Get Character Info</button>
+
+  <h3 id="charName"></h3>
+  <p id="charAbout"></p>
+  <img id="charImg" src="" alt="characters image">
+
+  <script src="main.js"></script>
 </body>
 </html>
