--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
   <p>Github Repo: <a target="_blank" href="https://github.com/RyanShort13110/dbz-api">https://github.com/RyanShort13110/dbz-api</a></p>
   <p>This site is in no way affiliated with Toei Animation or any series or entity produced by Toei Animation, I'm just a fan plz don't sue =)</p>
 
-  <script type="text/javascript" src="/main.js"></script>
+  <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
