adjusting the main.js file

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
   <section id="testSec">
     <h2>Test it out below</h2>
     <p>Enter a characters name, click the button, view some data. Easy peasy.</p>
+    <input placeholder="Krillin" type="text" class="charactersName">
+    <button>Get Character Info</button>
   </section>
-
-  <input placeholder="Krillin" type="text" class="charactersName">
-  <button>Get Character Info</button>
 
   <h3 id="charName"></h3>
   <img id="charImg" src="">
@@ -34,6 +33,6 @@
   <p>Github Repo: <a target="_blank" href="https://github.com/RyanShort13110/dbz-api">https://github.com/RyanShort13110/dbz-api</a></p>
   <p>This site is in no way affiliated with Toei Animation or any series or entity produced by Toei Animation, I'm just a fan plz don't sue =)</p>
 
-  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
