removed the test section

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 
   <section id="quickDocs">
     <h2>Quick Docs</h2>
-    <p>url: <code>https://nice-gray-cockroach-garb.cyclic.app/character-name</code></p>
+    <p>url: <code>https://nice-gray-cockroach-garb.cyclic.app/api/character-name</code></p>
     <p>Change <code>character-name</code> to whichever character you want to view.</p>
-    <p>For example: <code>https://nice-gray-cockroach-garb.cyclic.app/krillin</code></p>
+    <p>For example: <code>https://nice-gray-cockroach-garb.cyclic.app/api/krillin</code></p>
   </section>
 
-  <section id="testSec">
+  <!-- <section id="testSec">
     <h2>Test it out below</h2>
-    <p>Enter a characters name, click the button, view some data. Easy peasy.</p>
+    <p>Enter a characters name, click the button, view character data. Easy peasy.</p>
     <input placeholder="Krillin" type="text" class="charactersName">
     <button>Get Character Info</button>
   </section>
 
   <h3 id="charName"></h3>
   <img id="charImg" src="">
-  <p id="charAbout"></p>
+  <p id="charAbout"></p> -->
 
   <p>My site: <a target="_blank" href="https://ryanshort.netlify.app">ryanshort.netlify.app</a></p>
   <p>Github Repo: <a target="_blank" href="https://github.com/RyanShort13110/dbz-api">https://github.com/RyanShort13110/dbz-api</a></p>
   <p>This site is in no way affiliated with Toei Animation or any series or entity produced by Toei Animation, I'm just a fan plz don't sue =)</p>
 
-  <script type="application/javascript" src="./main.js"></script>
+  <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
