--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
   <section id="quickDocs">
     <h2>Quick Docs</h2>
-    <p>url: <code>https://nice-gray-cockroach-garb.cyclic.app/api/character-name</code></p>
+    <p>url: <code>https://unofficialdbzapi.cyclic.app/api/character-name</code></p>
     <p>Change <code>character-name</code> to whichever character you want to view.</p>
-    <p>For example: <code>https://nice-gray-cockroach-garb.cyclic.app/api/krillin</code></p>
+    <p>For example: <code>https://unofficialdbzapi.cyclic.app/api/krillin</code></p>
   </section>
 
   <!-- <section id="testSec">
