identified css problem, removed comments from js

--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@ fetch(`https://unofficialdbzapi.cyclic.app/api/${character}`)
         </li>
       </ul>
       <p>
-        This site is in no way affiliated with Dragon Ball Z, Funimation, or Toei Animation, I'm just a fan plz don't sue =)
+        This site is in no way affiliated with Dragon Ball Z, Funimation, or Toei Animation, I'm just a fan plz don't sue 😄
       </p>
     </footer>
 
