--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       <div class="test-input">
         <input
           id="character-request"
-          placeholder="Krillin"
+          placeholder="Krillin, Goten, etc..."
           type="text"
           class="charactersName"
         />
@@ -56,7 +56,7 @@
         <pre><code>https://unofficialdbzapi.cyclic.app/api/*character*</code></pre>
       </p>
       <p>
-        Change <code>*character*</code> to search for different characters
+        Change <code>*character*</code> to search for different characters.
       </p>
       <p> 
         For a quick test of the API you can ask for individual characters:
@@ -98,7 +98,7 @@ fetch(`https://unofficialdbzapi.cyclic.app/api/${character}`)
         </li>
       </ul>
       <p>
-        This site is in no way affiliated with Dragon Ball Z, Funimation, or Toei Animation, I'm just a fan plz don't sue 😄
+        This site is in no way affiliated with Dragon Ball Z, Funimation, or Toei Animation, I'm just a fan plz don't sue 🙏😄
       </p>
     </footer>
 
