--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         - Vegeta
       </blockquote>
       <p>
-        This API shows info on DBZ characters like height & weight, dates for
+        This API provides info for DBZ characters like height & weight, dates for
         birth & death, short descriptions and more.
       </p>
     </header>
