--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,32 @@ fetch(`https://unofficialdbzapi.cyclic.app/api/${character}`)
   })
         </code></pre>
       </p>
+      <p>Example of returned data...</p>
+      <pre id="data-example">
+'vegeta': {
+  'name': 'Vegeta',
+  'pic': 'charcterpicurl.fakeurl',
+  'about': 'about character section',
+  ],
+  'race': 'Saiyan',
+  'height': '164 cm (5\'4")',
+  'weight': '56 kg (123 lbs)',
+  'birthDate': 'Age 732',
+  'deathDates': ['December 24, Age 762', 
+  'May 7, Age 774', 
+  'June, Age 779', 
+  'Age 801', 
+  'Age 889'
+  ],
+  'alliegiance': ['Frieza Force (Formerly)', 
+  'Dragon Team', 
+  'Organization of Babidi (Formerly)', 
+  'Team Universe 7', 
+  'Team Universe 6 (baseball only)', 
+  'Galactic Patrol'
+  ]
+},
+        </pre>
       <p>No API key is required, simply plug and play!</p>
     </section>
 
