updated character.js - changed the 'unknown

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <section id="test-sec">
       <p>
         <strong
-          >Test the API here. Enter a characters name, click the button, view that sweet data.
+          >Test the API here. Enter a characters name, click the button, view character data.
         </strong>
       </p>
       <div class="test-input">
