updated html - new API data example

--- a/public/index.html
+++ b/public/index.html
@@ -81,25 +81,41 @@ fetch(`https://unofficialdbzapi.cyclic.app/api/${character}`)
       <pre id="data-example">
 'vegeta': {
   'name': 'Vegeta',
-  'pic': 'charcterpicurl.fakeurl',
-  'about': 'about character section',
-  ],
+  'pic': 'photo ur;',
+  'about': 'Character description here',
   'race': 'Saiyan',
   'height': '164 cm (5\'4")',
   'weight': '56 kg (123 lbs)',
   'birthDate': 'Age 732',
-  'deathDates': ['December 24, Age 762', 
-  'May 7, Age 774', 
-  'June, Age 779', 
-  'Age 801', 
-  'Age 889'
+  'deathDates': [
+    'December 24, Age 762', 
+    'May 7, Age 774', 
+    'June, Age 779', 
+    'Age 801', 
+    'Age 889'
   ],
-  'alliegiance': ['Frieza Force (Formerly)', 
-  'Dragon Team', 
-  'Organization of Babidi (Formerly)', 
-  'Team Universe 7', 
-  'Team Universe 6 (baseball only)', 
-  'Galactic Patrol'
+  'alliegiance': [
+    'Frieza Force (Formerly)', 
+    'Dragon Team', 
+    'Organization of Babidi (Formerly)', 
+    'Team Universe 7', 
+    'Team Universe 6 (baseball only)', 
+    'Galactic Patrol'
+  ],
+  'relatives': [
+    'King Vegeta (father)',
+    'Mother',
+    'Dr. Brief (father-in-law)',
+    'Bikini (mother-in-law)',
+    'Tarble (younger brother)',
+    'Bulma (wife)',
+    'Tights (sister-in-law)',
+    'Gure (sister-in-law)',
+    'Trunks (son)',
+    'Future Trunks (alternate timeline son)',
+    'Bulla (daughter)',
+    'Bulma Leigh (descendant)',
+    'Vegeta Jr. (descendant)'
   ]
 },
         </pre>
