--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@ fetch(`https://unofficialdbzapi.cyclic.app/api/${character}`)
       <pre id="data-example">
 'vegeta': {
   'name': 'Vegeta',
-  'pic': 'photo ur;',
+  'pic': 'photo url',
   'about': 'Character description here',
   'race': 'Saiyan',
   'height': '164 cm (5\'4")',
