added new characters, updated html, added 'character list' to readme

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       </blockquote>
       <p>
         This API provides info for DBZ characters like height & weight, dates for
-        birth & death, short descriptions and more.
+        birth & death, short descriptions and more!
       </p>
     </header>
 
@@ -120,6 +120,7 @@ fetch(`https://unofficialdbzapi.cyclic.app/api/${character}`)
 },
         </pre>
       <p>No API key is required, simply plug and play!</p>
+      <p>Full list of characters available on <a href="https://github.com/RyanShort13110/dbz-api">Github</a>.</p>
     </section>
 
     <!-- Footer -->
