added new github link to html, typo fix in readme

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,9 @@
     <!-- Test Input -->
     <section id="test-sec">
       <p>
+        Full list of characters available on <a href="https://github.com/RyanShort13110/dbz-api">Github</a>.
+      </p>
+      <p>
         <strong
           >Test the API here. Enter a characters name, click the button, view character data.
         </strong>
@@ -118,9 +121,8 @@ fetch(`https://unofficialdbzapi.cyclic.app/api/${character}`)
     'Vegeta Jr. (descendant)'
   ]
 },
-        </pre>
+      </pre>
       <p>No API key is required, simply plug and play!</p>
-      <p>Full list of characters available on <a href="https://github.com/RyanShort13110/dbz-api">Github</a>.</p>
     </section>
 
     <!-- Footer -->
@@ -137,11 +139,11 @@ fetch(`https://unofficialdbzapi.cyclic.app/api/${character}`)
         </li>
       </ul>
       <ul class="copyright">
-        <li>Built by: <a href="https://ryanshort.dev">ryan</a></li>
+        <li>Built by: <a class="portfolio-link" href="https://ryanshort.dev">ryan</a></li>
         </li>
       </ul>
       <p>
-        This site is in no way affiliated with Dragon Ball Z, Funimation, or Toei Animation, I'm just a fan plz don't sue 🙏😄
+        This project is in no way affiliated with Dragon Ball Z, Funimation, or Toei Animation. I'm just a fan plz don't sue 🙏😸
       </p>
     </footer>
 
