--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="shortcut icon" href="./images/dragonball-icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/dragonBallIcon.ico" type="image/x-icon">
   </head>
   <body class="is-preload">
     <!-- Header -->
