updated html, new link added

--- a/public/index.html
+++ b/public/index.html
@@ -80,12 +80,12 @@ fetch(`https://unofficialdbzapi.cyclic.app/api/${character}`)
   })
         </code></pre>
       </p>
-      <p>Example of returned data...</p>
+      <p>Example of returned data: </p>
       <pre id="data-example">
 'vegeta': {
   'name': 'Vegeta',
-  'pic': 'photo url',
-  'about': 'Character description here',
+  'pic': 'photo url here',
+  'about': 'character description here',
   'race': 'Saiyan',
   'height': '164 cm (5\'4")',
   'weight': '56 kg (123 lbs)',
@@ -120,9 +120,9 @@ fetch(`https://unofficialdbzapi.cyclic.app/api/${character}`)
     'Bulma Leigh (descendant)',
     'Vegeta Jr. (descendant)'
   ]
-},
+}
       </pre>
-      <p>No API key is required, simply plug and play!</p>
+      <p>No API key required, simply plug and play!</p>
     </section>
 
     <!-- Footer -->
@@ -139,7 +139,8 @@ fetch(`https://unofficialdbzapi.cyclic.app/api/${character}`)
         </li>
       </ul>
       <ul class="copyright">
-        <li>Built by: <a class="portfolio-link" href="https://ryanshort.dev">ryan</a></li>
+        <li>
+          Built by: <a class="portfolio-link" href="https://ryanshort.dev">ryan</a>
         </li>
       </ul>
       <p>
